# LCS-optimization

./: CMakeLists.txt  README.md
lib/: LCSQuery.cpp  LCSQuery.h  MatrixUtils.cpp  MatrixUtils.h  TransitionMatrix.cpp  TransitionMatrix.h
tests/: test.cpp
